examples/tests/compile_fail/const_array_element_assign_fail.zl
fun main() >> i32 {
    const arr<i32, 2> nums = {1, 2};
    nums[0] = 3;
    return 0;
}
